chore: fix checkbox wrapping degradation caused by #965 (#994)
Fixes degradation caused by recent commit in the ui5 -label #965
resulting in a bug with the ui5-checkbox wrapping

--- a/packages/main/src/themes/CheckBox.css
+++ b/packages/main/src/themes/CheckBox.css
@@ -141,7 +141,6 @@ https://github.com/philipwalton/flexbugs/issues/231
 	cursor: default;
 	text-overflow: ellipsis;
 	overflow: hidden;
-	white-space: nowrap;
 	pointer-events: none;
 	user-select: none;
 	-ms-user-select: none;
